First on bug fix

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h1>Hello World!All the power is with in you!!</h1>
-<h2>Micorservices!!</h2>
+<h2>Micorservices Project!!</h2>
 </body>
 </html>
